# devlabs

./: .gitignore  Cargo.toml  Dockerfile  README.md  devenv.nix  docker-compose.yml
.sqlx/: query-5a2596e71ecb7bed32db6d84958704dd698fd620abd049491d1b9ff8a552ebe2.json
docs/requests/: expenses.http
migrations/: 20250523033105_create_expenses.sql
src/lib/: config.rs
src/lib/domain/finance/: ports.rs  service.rs
src/lib/domain/finance/models/: expense.rs
src/lib/inbound/: http.rs
src/lib/inbound/http/: api_error.rs  api_success.rs  mod.rs  responses.rs  server.rs
src/lib/inbound/http/handlers/: expense.rs  expense_schema.rs  mod.rs
src/lib/outbound/: email_client.rs  mod.rs  postgres.rs  prometheus.rs  sqlite.rs
