[package]
name = "devlabs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-macros = "0.5.0"
derive_more = { version = "2.0.1", features = ["from"] }
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace", "tracing", "util"] }
tower-layer = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }

[lib]
name = "api_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "api"
path = "src/bin/server/main.rs"
